# From_Console_to_Cloud

./: .env.example  .gitignore  CLAUDE.md  Claude_learnings.md  QWEN.md  README.md  USAGE.md  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  pyproject.toml  uv.md
.claude/: settings.local.json
.github/workflows/: deploy-cloud.yml  sync-to-hf.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .gitignore  BACKEND_ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  auth.db  deploy_hf.sh  generate_vapid_keys.py  main.py  mcp_tools.py  models.py  recurring_service.py  reminder_service.py  requirements.txt  space.yaml  update_neon_schema.sql
backend/auth/: jwt.py
backend/database/: __init__.py
backend/dependencies/: user.py
backend/lib/: consumer.py  events.py
backend/mcp_server/: mcp_server.py
backend/models/: user.py
backend/routes/: auth.py  chat.py  chatkit.py  notifications.py  tasks.py
backend/schemas/: input_output_validation.py  task.py  tasks.py
backend/simple_agents/: todo_agent.py
backend/tests/: test_all_keys.py  test_api_endpoints.py  test_auth_endpoints.py  test_auth_flow.py  test_auth_middleware.py  test_authenticated_requests.py  test_integration.py  test_mcp_tools.py  test_models.py  test_status_codes.py  test_task_workflow.py  test_user_isolation.py
backend/todo_agent/: todo_agent.py
backend/utils/: dapr_utils.py  logging_config.py  monitoring.py
docs/: API_DOCUMENTATION.md  API_RESPONSE_TIME_VERIFICATION.md  AUTHENTICATION_FLOW.md  CHATBOT_USER_GUIDE.md  CHATKIT_FRONTEND_SETUP.md  CONCURRENT_USER_TESTING.md  CONFIGURATION_GUIDE.md  DATABASE_PERFORMANCE.md  DOCKER_COMPOSE_SETUP.md  ENVIRONMENT_VARIABLES.md  LARGE_DATA_SET_TESTING.md  MCP_TOOL_SPECIFICATIONS.md
frontend/: CLAUDE.md
frontend/full-stack-todo/: .env.example  .gitignore  types.ts
full-stack-todo/: .dockerignore  .env.example  Dockerfile  FRONTEND_ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  types.ts
full-stack-todo/app/: layout.tsx  page.tsx
full-stack-todo/components/: DashboardUI.tsx  LoadingSpinner.tsx
full-stack-todo/context/: AuthContext.tsx
full-stack-todo/lib/: api.ts  auth.ts
full-stack-todo/public/: sw.js
full-stack-todo/tests/: api_client.test.ts  frontend.test.tsx
micro-task-chart/: Chart.yaml  values.yaml
micro-task-chart/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  database-init-configmap.yaml  database-service.yaml  database-statefulset.yaml  frontend-deployment.yaml  frontend-service.yaml  httproute.yaml  ingress.yaml  networkpolicy.yaml  secrets.yaml  serviceaccount.yaml
specs/: architecture.md  overview.md
specs/001-cli-todo/: plan.md  spec.md  (+1 more)
src/: README.md  __init__.py  cli.py  main.py  todo.py
tests/: test_todo.py
(+127 files in other folders)
