[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-todo"
version = "0.1.0"
description = "An interactive CLI todo application"
authors = [{name = "Todo App Developer"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "openai-agents>=0.6.5",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-jose>=3.5.0",
    "questionary>=2.0.0",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "sqlmodel>=0.0.31",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[project.scripts]
todo = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v"]
